service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snake-game-service
  namespace: nake-game
  labels:
    app: nake-game
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: nake-game
